--- a/Class_9-26_Enrollment.Rmd
+++ b/Class_9-26_Enrollment.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Class_9-26"
+title: "Enrollment"
 author: "Claire Hotchkin"
 date: "9/26/2018"
 output: html_document
@@ -7,4 +7,14 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(dplyr)
 ```
+
+```{r}
+x <- read_csv("enrollment.csv") %>%
+  select(course_name, u_grad) 
+
+x
+```
+
